@@ -1,3 +1,8 @@
+2011-12-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* NEWS: 1.5-b2 release.
+	* plugins/picasa.py: Picasa feeds have not included exif data.
+
 2011-12-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.5-b1 release.
